Bug 51446 - FILEOPEN: All columns have the same default width 22,58mm
Summary: FILEOPEN: All columns have the same default width 22,58mm
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Daniel Bankston
URL:
Whiteboard: target:3.7.0
Keywords: regression
: 51512 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-26 07:22 UTC by Rainer Bielefeld Retired
Modified: 2012-07-13 04:09 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (20.35 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-26 07:22 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-06-26 07:22:58 UTC
Created attachment 63487 [details]
Sample Document

Steps how to reproduce wwith parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 3985521]" (tinderbox: W2008R2@16-minimal_build, pull time 2012-06-24):

Open attached Sample document. 
Columns in sheet should be very different (try with 3.5.5 or 3.6.0.0.beta2).
Old column width is lost when you save with Master
Comment 1 Rainer Bielefeld Retired 2012-07-01 06:00:18 UTC
*** Bug 51512 has been marked as a duplicate of this bug. ***
Comment 2 Korrawit Pruegsanusak 2012-07-04 02:37:43 UTC
I can confirm this. Also, Michael Stahl filed a duplicate (see comment 1) with attachment 63558 [details], so NEW.
Comment 3 Korrawit Pruegsanusak 2012-07-04 03:10:32 UTC
Forgot to say, I tested on Windows XP with 3.7.0.0.alpha0+ (Build ID: 3f1355) pull time 2012-06-27 04:02:20.

Also, [NOT REPRODUCIBLE] in 3.6 branch => very new regression after 3.6 branching
Comment 4 Korrawit Pruegsanusak 2012-07-08 05:18:52 UTC
With build from tinderbox W2008R2@16-minimal_build, regression appears between pull time 2012-06-17 00:08:48 (3135d6ea62522276682cdf4da75bc769df263021) and pull time 2012-06-22 07:25:25 (06395b802fe1cdc87a1b05dbeb65bb9cce724656)
Comment 5 Daniel Bankston 2012-07-10 19:27:09 UTC
I'll take a look at it.  This is an area I've been working with closely.
Comment 6 Not Assigned 2012-07-13 04:07:33 UTC
Daniel Bankston committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=68eb65f19d4f3fb564ac993e8b2f37fb33d685c3

Fix broken ODS column width import fdo#51446