Fix broken ODS column width import fdo#51446

Change-Id: I43b6558de6e92b0fe40a38b5f2417bebad2b7f8b